Se agregan Validator y escÃaner de Sonarlint en 0