@@ -5,18 +5,13 @@ import com.prueba.pruebaparqueadero.exceptions.NotFoundException;
 import com.prueba.pruebaparqueadero.feignclients.CorreoFeignClients;
 import com.prueba.pruebaparqueadero.feignclients.dto.CorreoRequestDTO;
 import com.prueba.pruebaparqueadero.services.dtos.ParqueaderoDTO;
-import com.prueba.pruebaparqueadero.services.dtos.VehiculosParqueadosDTO;
 import feign.FeignException;
 import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.client.HttpClientErrorException;
-import org.springframework.web.client.RestTemplate;
 import com.prueba.pruebaparqueadero.entities.HistorialVehiculos;
 import com.prueba.pruebaparqueadero.entities.Parqueadero;
 import com.prueba.pruebaparqueadero.entities.Usuario;
@@ -33,11 +28,8 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -49,18 +41,22 @@ public class ParqueaderoService {
     private final HistorialVehiculosRepository historialVehiculosRepository;
     private final CorreoFeignClients correoFeignClients;
     private final ModelMapper modelMapper;
+    private static final String PARQUEADERO_NO_ENCONTRADO = "Parqueadero no encontrado";
     private static final Logger logger = LoggerFactory.getLogger(ParqueaderoService.class);
 
 
-    public Parqueadero crearParqueadero(Parqueadero parqueadero, int idSocio) {
-        Optional<Usuario> socioOptional = usuarioRepository.findById(idSocio);
-        if (socioOptional.isPresent()) {
-            Usuario socio = socioOptional.get();
-            parqueadero.setSocio(socio);
+
+    public Parqueadero crearParqueadero(ParqueaderoDTO parqueaderoDto, int idSocio) {
+        Usuario socioOptional = usuarioRepository.findById(idSocio)
+                .orElseThrow(() -> new NotFoundException("No se encontró el socio identificado con: " + idSocio));
+
+        Parqueadero parqueadero = new Parqueadero();
+            parqueadero.setNombre(parqueaderoDto.getNombre());
+            parqueadero.setDireccion(parqueaderoDto.getDireccion());
+            parqueadero.setCapacidadVehicular(parqueaderoDto.getCapacidadVehicular());
+            parqueadero.setCostoHora(parqueaderoDto.getCostoHora());
+            parqueadero.setSocio(socioOptional);
             return parqueaderoRepository.save(parqueadero);
-        } else {
-            throw new NotFoundException("No se encontró el socio identificado con: " + idSocio);
-        }
     }
 
     public ParqueaderoDTO obtenerParqueadero(int id) {
@@ -69,18 +65,16 @@ public class ParqueaderoService {
         return modelMapper.map(parqueadero, ParqueaderoDTO.class);
     }
 
-    public Parqueadero actualizarParqueadero(int id, Parqueadero parqueadero) {
-        Optional<Parqueadero> parqueaderoOptional = parqueaderoRepository.findById(id);
-        if (parqueaderoOptional.isPresent()) {
-            Parqueadero parqueaderoExistente = parqueaderoOptional.get();
-            parqueaderoExistente.setNombre(parqueadero.getNombre());
-            parqueaderoExistente.setDireccion(parqueadero.getDireccion());
-            parqueaderoExistente.setCapacidadVehicular(parqueadero.getCapacidadVehicular());
-            parqueaderoExistente.setCostoHora(parqueadero.getCostoHora());
+    public Parqueadero actualizarParqueadero(int id, ParqueaderoDTO parqueadero) {
 
-            return parqueaderoRepository.save(parqueaderoExistente);
-        }
-        return null;
+        Parqueadero parqueadero1 = parqueaderoRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException(PARQUEADERO_NO_ENCONTRADO));
+        parqueadero1.setNombre(parqueadero.getNombre());
+        parqueadero1.setDireccion(parqueadero.getDireccion());
+        parqueadero1.setCapacidadVehicular(parqueadero.getCapacidadVehicular());
+        parqueadero1.setCostoHora(parqueadero.getCostoHora());
+
+        return parqueaderoRepository.save(parqueadero1);
     }
 
     public void eliminarParqueadero(int id) {
@@ -89,22 +83,15 @@ public class ParqueaderoService {
 
     @Transactional
     public int registrarEntradaVehiculo(VehiculoDTO vehiculoDTO, String email) {
-        Optional<Vehiculo> vehiculoOptional = vehiculoRepository.findByPlaca(vehiculoDTO.getPlaca());
-        if (vehiculoOptional.isPresent()) {
-            Vehiculo vehiculo = vehiculoOptional.get();
-            Optional<HistorialVehiculos> historialActualOptional = historialVehiculosRepository.findByVehiculoAndSalidaIsNull(vehiculo);
-            if (historialActualOptional.isPresent()) {
-                throw new ConflictException("No se puede Registrar Ingreso, ya existe la placa en este u otro parqueadero");
-            }
-        }
+        Vehiculo vehiculo = vehiculoRepository.findByPlaca(vehiculoDTO.getPlaca())
+                .orElseThrow(() -> new ConflictException("No se puede Registrar Ingreso, ya existe la placa en este u otro parqueadero"));
 
-        Optional<Parqueadero> parqueaderoOptional = parqueaderoRepository.findById(vehiculoDTO.getIdParqueadero());
-        if (!parqueaderoOptional.isPresent()) {
-            throw new NotFoundException("Parqueadero no encontrado");
-        }
-        Parqueadero parqueadero = parqueaderoOptional.get();
+        HistorialVehiculos historialOptional = historialVehiculosRepository.findByVehiculoAndSalidaIsNull(vehiculo)
+                .orElseThrow(() -> new ConflictException("No se puede Registrar Ingreso, ya existe la placa en este u otro parqueadero"));
 
-        Vehiculo vehiculo = new Vehiculo();
+        Parqueadero parqueadero = parqueaderoRepository.findById(vehiculoDTO.getIdParqueadero())
+                .orElseThrow(() -> new NotFoundException(PARQUEADERO_NO_ENCONTRADO));
+
         vehiculo.setPlaca(vehiculoDTO.getPlaca());
         vehiculo.setMarca(vehiculoDTO.getMarca());
         vehiculo.setModelo(vehiculoDTO.getModelo());
@@ -112,12 +99,11 @@ public class ParqueaderoService {
         vehiculo.setParqueadero(parqueadero);
         vehiculo = vehiculoRepository.save(vehiculo);
 
-        HistorialVehiculos historial = new HistorialVehiculos();
-        historial.setVehiculo(vehiculo);
-        historial.setParqueadero(parqueadero);
-        historial.setEntrada(LocalDateTime.now());
-        historial.setSalida(null);
-        historial = historialVehiculosRepository.save(historial);
+        historialOptional.setVehiculo(vehiculo);
+        historialOptional.setParqueadero(parqueadero);
+        historialOptional.setEntrada(LocalDateTime.now());
+        historialOptional.setSalida(null);
+        historialOptional = historialVehiculosRepository.save(historialOptional);
 
         try {
             CorreoRequestDTO correoRequestDTO = guardarCorreo(vehiculo, parqueadero);
@@ -126,7 +112,7 @@ public class ParqueaderoService {
             logger.error("El servicio de correo no está disponible debido a lo siguiente: ".concat(e.getMessage()));
         }
 
-        return historial.getId();
+        return historialOptional.getId();
     }
 
     private CorreoRequestDTO guardarCorreo(Vehiculo vehiculo, Parqueadero parqueadero) {
@@ -140,11 +126,8 @@ public class ParqueaderoService {
 
     @Transactional
     public void registrarSalidaVehiculo(String placa) {
-        Optional<Vehiculo> vehiculoOptional = vehiculoRepository.findByPlaca(placa);
-        if (!vehiculoOptional.isPresent()) {
-            throw new NotFoundException("No se puede Registrar Salida, no existe la placa en el parqueadero");
-        }
-        Vehiculo vehiculo = vehiculoOptional.get();
+        Vehiculo vehiculo = vehiculoRepository.findByPlaca(placa)
+                .orElseThrow(() -> new NotFoundException("No se puede Registrar Salida, no existe la placa en el parqueadero"));
 
         Optional<HistorialVehiculos> historialOptional = historialVehiculosRepository.findByVehiculoAndSalidaIsNull(vehiculo);
         if (!historialOptional.isPresent()) {
@@ -183,48 +166,48 @@ public class ParqueaderoService {
 
     public BigDecimal calcularGananciasDelDia(int idParqueadero) {
         Parqueadero parqueadero = parqueaderoRepository.findById(idParqueadero)
-                .orElseThrow(() -> new NotFoundException("Parqueadero no encontrado"));
+                .orElseThrow(() -> new NotFoundException(PARQUEADERO_NO_ENCONTRADO));
+
 
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime inicioDia = now.toLocalDate().atStartOfDay();
         LocalDateTime finDia = inicioDia.plusDays(1);
 
-        return calcularGananciasPorPeriodo(inicioDia, finDia, idParqueadero);
+        return calcularGananciasPorPeriodo(inicioDia, finDia, parqueadero.getId());
     }
 
     public BigDecimal calcularGananciasDelMes(int idParqueadero) {
         Parqueadero parqueadero = parqueaderoRepository.findById(idParqueadero)
-                .orElseThrow(() -> new ConflictException("Parqueadero no encontrado"));
+                .orElseThrow(() -> new NotFoundException(PARQUEADERO_NO_ENCONTRADO));
 
         LocalDate now = LocalDate.now();
         LocalDate inicioMes = now.withDayOfMonth(1);
         LocalDate finMes = now.plusMonths(1).withDayOfMonth(1);
 
-        return calcularGananciasPorPeriodo(inicioMes.atStartOfDay(), finMes.atStartOfDay(), idParqueadero);
+        return calcularGananciasPorPeriodo(inicioMes.atStartOfDay(), finMes.atStartOfDay(), parqueadero.getId());
     }
 
     public BigDecimal calcularGananciasDelAnio(int idParqueadero) {
         Parqueadero parqueadero = parqueaderoRepository.findById(idParqueadero)
-                .orElseThrow(() -> new ConflictException("Parqueadero no encontrado"));
+                .orElseThrow(() -> new NotFoundException(PARQUEADERO_NO_ENCONTRADO));
+
         LocalDate now = LocalDate.now();
         LocalDate inicioAnio = now.withDayOfYear(1);
         LocalDate finAnio = now.plusYears(1).withDayOfYear(1);
 
-        return calcularGananciasPorPeriodo(inicioAnio.atStartOfDay(), finAnio.atStartOfDay(), idParqueadero);
+        return calcularGananciasPorPeriodo(inicioAnio.atStartOfDay(), finAnio.atStartOfDay(), parqueadero.getId());
     }
 
     public Page<ParqueaderoDTO> obtenerParqueaderosPorUsuarioSocio(int idUsuario, Pageable pageable) {
         Page<Parqueadero> parqueaderos = parqueaderoRepository.findBySocio_Id(idUsuario, pageable);
-        List<ParqueaderoDTO> listParqueadero = parqueaderos.getContent().stream().map(p -> modelMapper.map(p, ParqueaderoDTO.class)).collect(Collectors.toList());
-        Page<ParqueaderoDTO> parqueaderoDTOPage = new PageImpl<>(listParqueadero, pageable, parqueaderos.getTotalElements());
-        return parqueaderoDTOPage;
+        List<ParqueaderoDTO> listParqueadero = parqueaderos.getContent().stream().map(p -> modelMapper.map(p, ParqueaderoDTO.class)).toList();
+        return new PageImpl<>(listParqueadero, pageable, parqueaderos.getTotalElements());
     }
 
     public Page<ParqueaderoDTO> obtenerParqueaderosExistentes(Pageable pageable) {
         Page<Parqueadero> parqueaderos = parqueaderoRepository.findAll(pageable);
-        List<ParqueaderoDTO> listParqueadero = parqueaderos.getContent().stream().map(p -> modelMapper.map(p, ParqueaderoDTO.class)).collect(Collectors.toList());
-        Page<ParqueaderoDTO> parqueaderoDTOPage = new PageImpl<>(listParqueadero, pageable, parqueaderos.getTotalElements());
-        return parqueaderoDTOPage;
+        List<ParqueaderoDTO> listParqueadero = parqueaderos.getContent().stream().map(p -> modelMapper.map(p, ParqueaderoDTO.class)).toList();
+        return new PageImpl<>(listParqueadero, pageable, parqueaderos.getTotalElements());
 
     }
 
